--- a/layouts/partials/page-header.html
+++ b/layouts/partials/page-header.html
@@ -19,7 +19,7 @@
 	<p class="subtitle is-5 p-summary">{{ . }}</p>
 	{{ end }}
 
-	<p class="meta">
+	<!--p class="meta">
 
 		{{ with .Date }}
 		Written
@@ -40,6 +40,7 @@
 			{{- .Format "January 2, 2006" -}}
 		</time>
 		{{ end }}
-	</p>
+
+	</p-->
 
 </header>
