--- a/layouts/page/pool.html
+++ b/layouts/page/pool.html
@@ -1,14 +1,14 @@
 {{ define "main" }}
-
-<article class="h-entry">
-  {{/* partial "page-header" . */}}
-  <div class="e-content">
-    {{ .Content }}
-  </div>
-  <!-- Gets populated by JSON data from Pool API -->
-  <div id="stats-container"></div>
-</article>
-
+<main role="main" class="content column"><!-- is-8 is-offset-1 -->
+  <article class="h-entry">
+    {{/* partial "page-header" . */}}
+    <div class="e-content">
+      {{ .Content }}
+    </div>
+    <!-- Gets populated by JSON data from Pool API -->
+    <div id="stats-container"></div>
+  </article>
+</main>
 
 <script>
 	// source: https://howtocreateapps.com/fetch-and-display-json-html-javascript/
