--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -53,6 +53,32 @@ nav.navbar {
   }
 }
 
+.sidebar {
+  position: sticky;
+  top: 3rem;
+  // Projects
+  .project-info {
+    overflow: hidden;
+    dt {
+      text-transform: uppercase;
+      font-size: 0.85rem;
+    }
+    svg {
+      height: 20px;
+      position: relative;
+      top: 3px;
+      margin-right: 0.2rem;
+    }
+    dd {
+      padding: 0.1rem 0 1rem 1.7rem;
+      color: var(--text);
+      text-overflow: ellipsis;
+      overflow: hidden;
+    }
+  }
+}
+
+
 footer.footer.is-dark {
   @include gradient(#0C1010,#101414);
   padding: 5rem 1.5rem 8rem;
