sharing buttons partial

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -88,26 +88,7 @@
 
 		<h3 class="title is-5 mt-6">Share</h3>
 
-		<article class="panel card">
-			<a class="panel-block">
-				<span class="panel-icon">
-					<!-- icon -->
-				</span>
-				Tweet this
-			</a>
-			<a class="panel-block">
-				<span class="panel-icon">
-					<!-- icon -->
-				</span>
-				Like this
-			</a>
-			<a class="panel-block">
-				<span class="panel-icon">
-					<!-- icon -->
-				</span>
-				Reddit this
-			</a>
-		</article>
+		{{ partial "sharing-buttons.html" . }}
 
 	</div><!-- .sidebar -->
 </div><!-- .side -->
