--- a/layouts/page/project.html
+++ b/layouts/page/project.html
@@ -95,6 +95,11 @@
 
 		</dl><!-- .project-info -->
 
+
+		<h3 class="title is-5 mt-5">Share project</h3>
+
+		{{ partial "sharing-buttons.html" . }}
+
 	</div><!-- .sidebar -->
 </div><!-- .side -->
 {{ end }}
