--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,6 +9,13 @@ html {
   background: var(--bg);
 }
 
+.button {
+  &.is-dark {
+    background: var(--bg-lightest);
+    &:hover, &:focus { background: var(--hr); }
+  }
+}
+
 nav.navbar {
   .logo {
     max-height: 1.15rem;
@@ -56,6 +63,7 @@ nav.navbar {
 .sidebar {
   position: sticky;
   top: 3rem;
+
   // Projects
   .project-info {
     overflow: hidden;
@@ -76,7 +84,26 @@ nav.navbar {
       overflow: hidden;
     }
   }
-}
+
+  // Sharing
+  .sharing-buttons {
+    .button {
+      color: var(--text-muted);
+      &:hover, &:focus {
+        &.twitter {
+          svg { fill: var(--info); }
+        }
+        &.telegram {
+          svg { fill: var(--info); }
+        }
+        &.facebook {
+          svg { fill: var(--info); }
+        }
+      }
+    }
+  }
+
+} // .sidebar
 
 
 footer.footer.is-dark {
