--- a/layouts/page/project.html
+++ b/layouts/page/project.html
@@ -40,7 +40,7 @@
 
 		<h3 class="title is-5">Project info</h3>
 
-		<dl class="project-info">
+		<dl class="icon-list project-info">
 
 			{{ if .Params.project.cat }}
 			<dt>
