--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -54,9 +54,29 @@ nav.navbar {
 }
 
 .content {
+  h2, h3, h4 {
+    &:not(:first-child) { margin-top: 2.143em; }
+  }
   blockquote {
     background: var(--bg-lighter);
     border-color: var(--text-darkest);
+  }
+  figure {
+    margin: 2em 0;
+    background: var(--bg-lighter);
+    border-radius: 5px;
+    overflow: hidden;
+    img {
+      display: block;
+      padding: 2px;
+      border-top-left-radius: 4px;
+      border-top-right-radius: 4px;
+    }
+    p {
+      color: var(--text);
+      font-size: 0.95rem;
+      padding: 0.7rem 1rem;
+    }
   }
 }
 
