--- a/layouts/_default/taxonomy.html
+++ b/layouts/_default/taxonomy.html
@@ -1,16 +1,18 @@
 {{ define "main" }}
-<article>
-	<div>
-		<p>Below you will find pages that utilize the taxonomy term “{{ .Title }}”</p>
-	</div>
-</article>
-<div>
-	<section>
-		{{ range .Pages }}
+<main role="main" class="content column is-8">
+	<!--article>
 		<div>
-			{{ partial "summary.html" . }}
+			<p>Below you will find pages that utilize the taxonomy term “{{ .Title }}”</p>
 		</div>
-		{{ end }}
-	</section>
-</div>
+	</article-->
+	<div>
+		<section>
+			{{ range .Pages }}
+			<div>
+				{{ partial "summary.html" . }}
+			</div>
+			{{ end }}
+		</section>
+	</div>
+</main>
 {{ end }}
