--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -1,22 +1,37 @@
 {{ define "main" }}
 {{ $data := .Data }}
-<article>
-	<div>
-		{{ .Content }}
-	</div>
-</article>
-<div>
-	<section>
-		{{ range $key, $value := .Data.Terms }}
-		<h2>
-			<a href="{{ "/" | relLangURL }}{{ $.Data.Plural | urlize }}/{{ $key | urlize }}">
-				{{ $.Data.Singular | humanize }}: {{ $key }}
+<main role="main" class="content column is-8">
+	<article>
+		<div>
+			{{ .Content }}
+		</div>
+	</article>
+	<!--div>
+		<section>
+			{{ range $key, $value := .Data.Terms }}
+			<h2>
+				<a href="{{ "/" | relLangURL }}{{ $.Data.Plural | urlize }}/{{ $key | urlize }}">
+					{{ $.Data.Singular | humanize }}: {{ $key }}
+				</a>
+			</h2>
+			{{ range $value.Pages }}
+			{{ partial "summary.html" . }}
+			{{ end }}
+			{{ end }}
+		</section>
+	</div-->
+	{{ range .Data.Terms.Alphabetical }}
+
+	<article class="list-item h-entry">
+		<h3 class="p-name">
+			<a href="{{ .Page.Permalink }}">
+				{{ .Page.Title }}
+				<span class="count tag">{{ .Count }}</span>
 			</a>
-		</h2>
-		{{ range $value.Pages }}
-		{{ partial "summary.html" . }}
-		{{ end }}
-		{{ end }}
-	</section>
-</div>
+		</h3>
+	</article>
+
+	{{ end }}
+
+</main>
 {{ end }}
