--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -80,6 +80,10 @@ nav.navbar {
   }
 }
 
+.content-footer {
+  margin-top: 4rem;
+}
+
 article {
   // Pool page
   &.pool {
@@ -140,6 +144,7 @@ article {
 } // .sidebar
 
 
+// Site footer
 footer.footer.is-dark {
   @include gradient(#0C1010,#101414);
   padding: 5rem 1.5rem 8rem;
