content & meta updates

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -36,7 +36,7 @@
 		</section>
 		
 		<footer class="content-footer">
-			{{/*- partial "about-author.html" . -*/}}
+			{{- partial "about-author.html" . -}}
 			{{- partial "sharing-buttons.html" . -}}
 			{{- partial "tags.html" . -}}
 			{{- partial "categories.html" . -}}
