--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -66,7 +66,7 @@
 
 	<div class="section">
 		<div class="container">
-			<div class="columns">
+			<div class="main-content columns">
 
 				{{ block "sidebar" . }}{{ end }}
 				{{ block "main" . }}{{ end }}
