single layout finish (sidebar, about author)

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<main role="main" class="content column"><!-- is-8 is-offset-1 -->
+<main role="main" class="main-content column"><!-- is-8 is-offset-1 -->
 	<article>
 		
 		<span>
