--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 {{ $data := .Data }}
-<main role="main" class="content column is-8">
+<main role="main" class="main-content column is-8">
 	<article>
 		<div>
 			{{ .Content }}
