--- a/layouts/page/pool.html
+++ b/layouts/page/pool.html
@@ -50,9 +50,9 @@
 
 
 {{ define "main" }}
-<main role="main" class="content column is-7 is-offset-1">
+<main role="main" class="main-content column is-7 is-offset-1">
   <article class="pool h-entry">
-    <div class="e-content">
+    <div class="content e-content">
       {{ .Content }}
     </div>
   </article>
