--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -24,7 +24,7 @@
 
 {{ define "main" }}
 {{ $section := .Site.GetPage "section" .Section }}
-<main role="main" class="content column is-8 is-offset-1">
+<main role="main" class="main-content column is-8 is-offset-1">
 	<article class="h-entry">
 
 		{{/* partial "page-header.html" . */}}
@@ -37,9 +37,9 @@
 		
 		<footer class="content-footer">
 			{{- partial "about-author.html" . -}}
-			{{- partial "sharing-buttons.html" . -}}
-			{{- partial "tags.html" . -}}
-			{{- partial "categories.html" . -}}
+			{{/*- partial "sharing-buttons.html" . -*/}}
+			{{/*- partial "tags.html" . -*/}}
+			{{/*- partial "categories.html" . -*/}}
 		</footer>
 
 		<aside>
@@ -67,24 +67,101 @@
 <div class="side column is-3">
 	<div class="sidebar">
 
-		<h3 class="title is-5">Published</h3>
+		<!--h3 class="title is-5">Published</h3-->
+
+		<div class="media mb-6">
+
+			{{ $data := index .Site.Data .Site.Language.Lang }}
+			{{ range where $data.authors "name" "==" .Params.Author }}
+
+			<div class="media-left">
+				<figure class="image is-48x48">
+					<img src="{{ .photo }}" class="u-photo" alt="{{ .name }}">
+				</figure>
+			</div>
+
+			<div class="media-content">
+				<p class="title is-4 p-name">{{ .name }}</p>
+				{{ with .twitter_username }}<p class="subtitle is-6"><a class="u-url" href="https://twitter.com/{{ . }}">@{{ . }}</a></p>{{ end }}
+			</div>
+
+			{{ end }}
+
+		</div><!-- .media -->
 
 		<div class="card meta mb-6">
 			<div class="card-content">
+				<!--div class="media">
 
-				{{ with .Date }}
-				<time class="dt-published" datetime="{{ .Format "2006-01-02T15:04:05Z07:00" }}">
-					{{- .Format "January 2, 2006" -}}
-				</time>
-				{{ end }}
+					{{ $data := index .Site.Data .Site.Language.Lang }}
+					{{ range where $data.authors "name" "==" .Params.Author }}
+
+					<div class="media-left">
+						<figure class="image is-48x48">
+							<img src="{{ .photo }}" class="u-photo" alt="{{ .name }}">
+						</figure>
+					</div>
+
+					<div class="media-content">
+						<p class="title is-4 p-name">{{ .name }}</p>
+						{{ with .twitter_username }}<p class="subtitle is-6"><a class="u-url" href="https://twitter.com/{{ . }}">@{{ . }}</a></p>{{ end }}
+					</div>
+
+					{{ end }}
+
+				</div><!-- .media -->
+
+				<dl class="icon-list">
+
+					{{ with .Date }}
+					<dt>
+						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+							<path fill-rule="evenodd" d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z" clip-rule="evenodd" />
+						</svg>
+						Published
+					</dt>
+					<dd>
+						<time class="dt-published" datetime="{{ .Format "2006-01-02T15:04:05Z07:00" }}">
+							{{- .Format "January 2, 2006" -}}
+						</time>
+					</dd>
+					{{ end }}
+
+					<dt>
+						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+							<path d="M2 6a2 2 0 012-2h5l2 2h5a2 2 0 012 2v6a2 2 0 01-2 2H4a2 2 0 01-2-2V6z" />
+						</svg>
+						Category
+					</dt>
+					<dd>
+						<a href="{{ "/categories/" | relLangURL }}{{ .Params.categories | urlize }}" class="p-category">
+							{{- .Params.categories -}}
+						</a>
+					</dd>
+
+					<dt>
+						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+							<path fill-rule="evenodd" d="M17.707 9.293a1 1 0 010 1.414l-7 7a1 1 0 01-1.414 0l-7-7A.997.997 0 012 10V5a3 3 0 013-3h5c.256 0 .512.098.707.293l7 7zM5 6a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd" />
+						</svg>
+						Tags
+					</dt>
+					{{ range .Params.tags }}
+					<dd>
+						<a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}" class="p-category">
+							{{- . -}}
+						</a>
+					</dd>
+					{{ end }}
+
+				</dl>
 
 			</div>
 		</div>
 
 
-		{{ if .Params.Author }}
+		{{/* if .Params.Author }}
 			{{ partial "about-author.html" . }}
-		{{ end }}
+		{{ end */}}
 
 
 		<h3 class="title is-5 mt-6">Share</h3>
