--- a/layouts/_default/taxonomy.html
+++ b/layouts/_default/taxonomy.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<main role="main" class="content column is-8">
+<main role="main" class="main-content column is-8">
 	<!--article>
 		<div>
 			<p>Below you will find pages that utilize the taxonomy term “{{ .Title }}”</p>
