--- a/layouts/ecosystem/single.html
+++ b/layouts/ecosystem/single.html
@@ -21,7 +21,7 @@
 
 
 {{ define "main" }}
-<main role="main" class="content column is-8 is-offset-1">
+<main role="main" class="main-content column is-8 is-offset-1">
 	<article class="h-entry">
 		<div class="e-content">
 			{{ .Content }}
