--- a/layouts/page/single.html
+++ b/layouts/page/single.html
@@ -21,9 +21,9 @@
 
 
 {{ define "main" }}
-<main role="main" class="content column is-8"><!-- is-8 is-offset-1 -->
+<main role="main" class="main-content column is-8"><!-- is-8 is-offset-1 -->
 	<article class="h-entry">
-		<div class="e-content">
+		<div class="content e-content">
 			{{ .Content }}
 		</div>
 	</article>
