--- a/layouts/partials/categories.html
+++ b/layouts/partials/categories.html
@@ -1,8 +1,7 @@
-Category:
-<ul>
-	<li>
-		<a href="{{ "/categories/" | relLangURL }}{{ .Params.categories | urlize }}" class="p-category">
-			{{- .Params.categories -}}
-		</a>
-	</li>
-</ul>
+<dt>Category</dt>
+
+<dd>
+	<a href="{{ "/categories/" | relLangURL }}{{ .Params.categories | urlize }}" class="p-category">
+		{{- .Params.categories -}}
+	</a>
+</dd>
