--- a/layouts/partials/menu-contextual.html
+++ b/layouts/partials/menu-contextual.html
@@ -18,16 +18,30 @@ https://gohugo.io/content-management/related/
 {{ $related := .Site.RegularPages.Related . | first 15 }}
 
 {{ with $related }}
-<div>
-	<p>Related:</p>
-	<ul>
-		{{ range . }}
-		<li>
-			<a href="{{ .RelPermalink }}">
-				{{- .Title -}}
-			</a>
-		</li>
-		{{ end }}
-	</ul>
+
+<h3 class="title is-5 mt-6">Related content</h3>
+
+<div class="card">
+	<div class="card-content">
+
+		<ul>
+			{{ range . }}
+			<li>
+				<!--div class="tag mr-3">{{- .Params.categories -}}</div-->
+				<a href="{{ .RelPermalink }}">
+					{{- .Title -}}
+				</a>
+				<small class="ml-2">
+					{{ .Params.categories }} &bull;
+					<time class="dt-published" datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">
+						{{- .Date.Format "January 2, 2006" -}}
+					</time>
+				</small>
+			</li>
+			{{ end }}
+		</ul>
+
+	</div>
 </div>
+
 {{ end }}
