home: basic layout, added intro video

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -65,9 +65,33 @@
 <div class="side column is-4">
 	<div class="sidebar">
 		
-		<section class="e-content">
-			{{- .Content -}}
-			<a href="/about" class="button is-dark">About Particl.page</a>
+		<h2 class="title is-4">Discover Particl</h2>
+		<section class="card content">
+			<div class="card-image video is-16by9">
+				<video controls preload="metadata" poster="/video/particl-intro.jpg">
+					<source src="/video/particl-intro.mp4" type="video/mp4">
+				</video>
+			</div>
+			<div class="card-content">
+				<p>
+					Particl's mission is to empower society by fostering a new decentralized, private and democratic economy supported by its blockchain platform.
+				</p>
+				<p class="buttons">
+					<a href="https://particl.io" target="_blank" rel="noopener" class="button is-dark">Particl website</a>
+					<a href="https://particl.news" target="_blank" rel="noopener" class="button is-dark">News</a>
+					<a href="https://particl.wiki" target="_blank" rel="noopener" class="button is-dark">Wiki</a>
+				</p>
+			</div>
+		</section>
+		
+		<h2 class="title is-4 mt-6">About Particl.page</h2>
+		<section class="card content">
+			<div class="card-content">
+				<p>Particl.page is a community-run effort to grow Particl ecosystem and offer useful user-centric tools</p>
+				<p>
+					<a href="/about" class="button is-dark">Learn more</a>
+				</p>
+			</div>
 		</section>
 
 	</div>
