--- a/layouts/ecosystem/single.html
+++ b/layouts/ecosystem/single.html
@@ -23,7 +23,7 @@
 {{ define "main" }}
 <main role="main" class="main-content column is-8 is-offset-1">
 	<article class="h-entry">
-		<div class="e-content">
+		<div class="content e-content">
 			{{ .Content }}
 		</div>
 	</article>
@@ -36,7 +36,7 @@
 <div class="side column is-3">
 	<div class="sidebar">
 
-		<a href="/projects" class="button is-dark is-fullwidth mb-6">&larr; Back to Projects</a>
+		<a href="/ecosystem" class="button is-dark is-fullwidth mb-6">&larr; Back to Projects</a>
 
 		<h3 class="title is-5">Project info</h3>
 
