--- a/layouts/index.html
+++ b/layouts/index.html
@@ -22,9 +22,9 @@
 	</article>
 
 
-	<section class="article-list mt-6">
+	<section class="article-list">
 		<header>
-			<h2 class="title is-3">Latest articles</h2>
+			<h2 class="title is-4 mb-5">Latest articles</h2>
 		</header>
 
 		{{ range first 3 $articles }}
@@ -41,7 +41,7 @@
 
 	<section class="projects-list mt-6">
 		<header>
-			<h2 class="title is-3">Community projects</h2>
+			<h2 class="title is-4 mb-5">Community projects</h2>
 		</header>
 
 		{{ range first 3 $projects }}
