--- a/layouts/partials/site-footer.html
+++ b/layouts/partials/site-footer.html
@@ -37,6 +37,7 @@
 				<div class="title is-6">Particl links</div>
 				<ul>
 					<li><a href="https://particl.io">Official website</a></li>
+					<li><a href="https://particl.news">Latest news</a></li>
 					<li><a href="https://particl.wiki">Project Wiki</a></li>
 					<li><a href="https://ccs.particl.io">Crowdfunding</a></li>
 				</ul>
