--- a/layouts/index.html
+++ b/layouts/index.html
@@ -45,7 +45,7 @@
 		</header>
 
 		{{ range first 3 $projects }}
-		{{- partial "summary.html" . -}}
+		{{- partial "summary-ecosystem.html" . -}}
 		{{ end }}
 
 		<footer>
